Fix keyvisual on small display widths.

--- a/src/main/sass/_responsive.scss
+++ b/src/main/sass/_responsive.scss
@@ -33,7 +33,7 @@
     padding: 1.2em 0 3em;
     height: 180px;
     background: #e5e2b6 url('../img/keyvisual.jpg') no-repeat center 35%;
-    background-size: 110%;
+    background-size: 110% 110%;
     article {
       h1 {
         margin-top: 20px;
@@ -145,9 +145,9 @@
 @media (max-width: 600px) {
   section#welcome {
     padding: 1.2em 0 3em;
-    height: 180px;
+    height: 210px;
     background: #e5e2b6 url('../img/keyvisual.jpg') no-repeat center 95%;
-    background-size: 120%;
+    background-size: 120% 120%;
     article {
       h1 {
         font-size: 16px;
